--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,6 +5,13 @@
     "TenantId": "7489c99b-ec51-4536-8422-e136c3a8aec5",
     "ClientId": "d3abb66d-870a-4182-9067-938850d39e3c"
   },
+  "Swagger": {
+    "ClientId": "cd3f77c3-6aca-41e4-ad9c-4ca2cf6df814",
+    "ClientSecret": "7sUPzjg4hz3F=-h1ZAKWkW_djTlGm]jr"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-F2FD1C1;Database=EBSBilling;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
