Fixed Swagger Authentication -client id and call back Changed Db connection from local to Azure Db

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -10,7 +10,7 @@
     "ClientSecret": "7sUPzjg4hz3F=-h1ZAKWkW_djTlGm]jr"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-F2FD1C1;Database=EBSBilling;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:sqldatahub.database.windows.net,1433;Initial Catalog=EBSBilling;Persist Security Info=False;User ID=adminctgd71;Password=sdsjdh#@359;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
