--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -10,7 +10,9 @@
 
     // Coordinates of the TodoListService
     "TodoListResourceId": "d3abb66d-870a-4182-9067-938850d39e3c",
-    "TodoListBaseAddress": "https://localhost:44364"
+    //"TodoListBaseAddress": "https://localhost:44364"
+    "TodoListBaseAddress": "webapiroot.azurewebsites.net"
+    
   },
   "Logging": {
     "LogLevel": {
