--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -5,14 +5,11 @@
     "TenantId": "7489c99b-ec51-4536-8422-e136c3a8aec5",
     "ClientId": "0e6290db-dffe-4483-b9e9-721ded4059a5",
     "CallbackPath": "/signin-oidc",
-
     "ClientSecret": "Q-=_H.GZCFRe1AspnwGTZFa948f=z-y0",
+    "WebApiResourceId": "d3abb66d-870a-4182-9067-938850d39e3c",
+    //"WebApiBaseAddress": "https://localhost:44364"
+    "WebApiBaseAddress": "https://webapiroot.azurewebsites.net"
 
-    // Coordinates of the TodoListService
-    "TodoListResourceId": "d3abb66d-870a-4182-9067-938850d39e3c",
-    //"TodoListBaseAddress": "https://localhost:44364"
-    "TodoListBaseAddress": "webapiroot.azurewebsites.net"
-    
   },
   "Logging": {
     "LogLevel": {
